--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
   margin: 0;
   padding: 0;
@@ -11,8 +10,7 @@
   font-family: var(--font-wix);
 }
 
-
-.font2{
+.font2 {
   font-family: var(--font-montez);
 }
 
@@ -249,4 +247,46 @@
   .bold-15 {
     @apply text-[15px] font-[700];
   }
+}
+
+.card1 {
+  border-radius: 4px;
+  background: white;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  padding: 14px 30px 18px 26px;
+  cursor: pointer;
+}
+
+.card1:hover {
+  transform: scale(1.03);
+  -webkit-box-shadow: 0px 0px 10px 0px #dddde8;
+  -moz-box-shadow: 0px 0px 10px 0px #b5b6cc;
+  box-shadow: 0px 0px 10px 0px #b5b6cc;
+}
+
+.card2 {
+  -webkit-box-shadow: 0px 0px 16px 0px #dddde8;
+  -moz-box-shadow: 0px 0px 16px 0px #b5b6cc;
+  box-shadow: 0px 0px 18px 0px #b5b6cc;
+}
+
+.card3 {
+  border-radius: 4px;
+  /* background: #fff; */
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  padding: 14px 30px 18px 26px;
+  cursor: pointer;
+}
+
+.card3:hover {
+  transform: scale(1.04);
+  -webkit-box-shadow: 0px 0px 10px 0px #dddde8;
+  -moz-box-shadow: 0px 0px 10px 0px #b5b6cc;
+  box-shadow: 0px 0px 10px 0px #b5b6cc;
 }
