--- a/app/globals.css
+++ b/app/globals.css
@@ -290,3 +290,21 @@
   -moz-box-shadow: 0px 0px 10px 0px #b5b6cc;
   box-shadow: 0px 0px 10px 0px #b5b6cc;
 }
+
+.card4 {
+  border-radius: 4px;
+  background: white;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+    0.3s box-shadow,
+    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  padding: 14px 30px 18px 26px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
